trying to fix overflowing tasks

--- a/my-app-fe/src/App.css
+++ b/my-app-fe/src/App.css
@@ -1,4 +1,5 @@
 html, body, #root, .app {
+  overflow: auto;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -112,6 +113,8 @@ h2 {
   overflow-y: auto;
   background-color: gray;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #888 #eee;
 }
 
 .editWindow {
